Organised InternalLab.ipynb

--- a/InternalLab.ipynb
+++ b/InternalLab.ipynb
@@ -1,6 +1,47 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# ML Lab Exam\n",
+    "\n",
+    "Analyze public sentiment on a specific niche topic (e.g., emerging technologies, niche markets, or local events) using social media data. The aim is to detect shifts in sentiment trends and uncover key drivers behind the sentiment.\n",
+    "\n",
+    "Use a dataset related to tweets, Reddit posts, or forum discussions on a specific topic.\n",
+    "Example dataset: Sentiment140 (contains tweets with sentiment labels).\n",
+    "Alternatively, students can scrape recent social media data (if allowed).\n",
+    "\n",
+    "Clean the text (remove hashtags, mentions, URLs, and special characters).\n",
+    "Tokenize, lemmatize, and perform sentiment analysis.\n",
+    "\n",
+    "Visualize trends in sentiment over time.\n",
+    "Identify frequently mentioned topics or keywords using word clouds or topic modeling (LDA).\n",
+    "\n",
+    "Build a sentiment classifier using a machine learning algorithm like Logistic Regression, SVM, or Random Forest.\n",
+    "Evaluate the model on classification metrics (precision, recall, F1-score).\n",
+    "\n",
+    "Cluster tweets/posts to identify latent sentiment groups or trends.\n",
+    "Identify top influencers or users driving specific sentiments.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Preprocessing, EDA and Model Building & Evaluation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Dataset used is Sentiment140. It contains 1,600,000 tweets extracted using the twitter api. The tweets have been annotated (0 = negative, 4 = positive) and they can be used to detect sentiment.\n",
+    "\n",
+    "Since I couldn't realistically clean 1.6m tweets on my potato laptop, I've taken 2.5% of the data (i.e. 40,000 rows) using stratified split."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -779,6 +820,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Saving the models"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 31,
    "metadata": {},
@@ -797,6 +845,13 @@
     "\n",
     "with open('kmeans_model.pkl', 'wb') as f:\n",
     "    pickle.dump(kmeans, f)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## MLflow Integration"
    ]
   },
   {
